# GRC-

./: .gitignore  README.md  _seed.py  grc_report.html  main.py  pyproject.toml
grc_tool/: __init__.py  ai_advisor.py  assessment_manager.py  cli.py  control_manager.py  database.py  models.py  policy_manager.py  report_generator.py  risk_manager.py
grc_tool/frameworks/: __init__.py  csa_ccm.py  iso27001.py  nist_ai_rmf.py  nist_csf.py  soc2.py
tests/: test_grc_tool.py
