[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grc-tool"
version = "1.0.0"
description = "Professional GRC platform for Cloud and AI Governance, Risk & Compliance"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["grc", "governance", "risk", "compliance", "cloud-security", "ai-governance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[project.scripts]
grc = "grc_tool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["grc_tool*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
